2008-12-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Support GLib.Type as generic type argument

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Detect unsupported generic type arguments in local variable
	declarations

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valadbusservermodule.vala:
	* gobject/valagsignalmodule.vala:
	* vapi/dbus-glib-1.vapi:

	Rewrite D-Bus server support to directly use libdbus without
	dbus-glib marshalling, fixes bug 560034 and bug 549980

	Support BusName sender parameter in exported D-Bus methods

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add type_id for GHashTable

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	Support reading and writing nullable struct values

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix struct dup function for GValue

2008-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Detect unsupported generic type arguments, fixes bug 561674

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	Support reading and writing nullable GLib.Value values

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	Improve gsl_histogram_calloc_range binding,
	patch by Matías De la Puente, fixes bug 564387

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Remove g_thread_init binding, should never be called manually

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valaparser.vala:

	Remove workarounds for old Vala versions

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala:

	Detect conflicting local variables in parent scopes

	* vala/valaarraycreationexpression.vala:
	* vala/valacodewriter.vala:
	* vala/valaforeachstatement.vala:
	* vala/valagenieparser.vala: